--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
 ---
+import '@fontsource/philosopher';
+import '@fontsource/mulish';
+
 export interface Props {
 	title: string;
 }
@@ -11,11 +14,11 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/png" href="/favicon.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body>	
 		<slot />
 	</body>
 </html>
@@ -25,11 +28,23 @@ const { title } = Astro.props;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 	}
 	html {
-		font-family: system-ui, sans-serif;
 		background-color: #F6F6F6;
+		margin: 0;
+		padding: 0;
+	}
+	body {
+		margin: 0;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-			Bitstream Vera Sans Mono, Courier New, monospace;
+		Bitstream Vera Sans Mono, Courier New, monospace;
+	}
+	h1, h2, h3, h4, h5, h6 { 
+		font-family: "Philosopher", sans-serif; 
+	}
+	p, a {
+		font-family: "Mulish", sans-serif;
+		color: #3D3D3D;
+		margin: 0;
 	}
 </style>
