--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -40,7 +40,8 @@ const { title } = Astro.props;
 		Bitstream Vera Sans Mono, Courier New, monospace;
 	}
 	h1, h2, h3, h4, h5, h6 { 
-		font-family: "Philosopher", sans-serif; 
+		font-family: "Philosopher", sans-serif;
+		margin: 0; 
 	}
 	p, a {
 		font-family: "Mulish", sans-serif;
