--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
+import Footer from '../components/Footer.astro';
+import BannerHome from '../components/BannerHome.astro';
 ---
 
 <Layout title="VitaLena">
 	<main>
+		<BannerHome />
+		<!-- contacts -->
 		<div id="contacts" class="contacts">
 			<h1>Kontakte</h1>
 			<div class="address">
@@ -72,29 +76,39 @@ import Card from '../components/Card.astro';
 				</div>
 			  </div>
 			</div>
-		  </div>
-		<ul role="list" class="link-card-grid">
+		</div>
+
+		<!-- quote -->
+		<div class="quote">
+			<p>„Die Gesundheit überwiegt alle äußeren Güter so sehr, dass ein gesunder Bettler glücklicher als ein kranker König ist.“</p>
+			<p>Arthur Schopenhauer</p>
+		</div>
+
+		<!-- cards -->
+		<div class="cards">
+			<h1>Behandlungen</h1>
+			<div class="card-row">
 			<Card
-				href="https://docs.astro.build/"
-				title="Documentation"
-				body="Learn how Astro works and explore the official API docs."
+			  	imgPath="img/massage1-opt.jpg"
+				href="#"
+				title="Klassische Massage"
+				body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
 			<Card
-				href="https://astro.build/integrations/"
-				title="Integrations"
-				body="Supercharge your project with new frameworks and libraries."
+				imgPath="img/massage2-opt.jpg"
+				href="#"
+				title="Entspannungsmassage"
+				body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
 			<Card
-				href="https://astro.build/themes/"
-				title="Themes"
-				body="Explore a galaxy of community-built starter themes."
+				imgPath="img/massage3-opt.jpg"
+				href="#"
+				title="Sportmassage"
+				body="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
-			<Card
-				href="https://astro.build/chat/"
-				title="Community"
-				body="Come say hi to our amazing Discord community. ❤️"
-			/>
-		</ul>
+			</div>
+		</div>
+		<Footer />
 	</main>
 </Layout>
 
@@ -106,10 +120,11 @@ import Card from '../components/Card.astro';
   		height: 100%;
 		background-color: #EFD3D7;
 	}
+
+	/* contacts */
 	.contacts {
 		padding: 40px 40px;
 		text-align: center;
-		/* font-size: 20px; */
 	}
 
 	.contacts,
@@ -168,5 +183,28 @@ import Card from '../components/Card.astro';
 
 	.address a:hover {
 		color: #84858e;
+	}
+
+	/* quote */
+
+	.quote {
+		padding: 80px 150px;
+		background-color: rgba(255, 255, 255, 0.674);
+		text-align: center;
+		font-family: 'Philosopher', sans-serif;
+		font-size: 22px;
+		font-weight: 500;
+	}
+
+	/* cards */
+	.cards {
+		padding: 40px 40px;
+		text-align: center;
+	}
+
+	.card-row {
+		display: flex;
+		gap: 16px;
+		margin-top: 20px;
 	}
 </style>
