--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,6 +1,6 @@
 ---
-import { Icon } from 'astro-icon';
-import Button from '../components/Button.astro';
+// import { Icon } from 'astro-icon';
+import ButtonGrey from './ButtonGrey.astro';
 export interface Props {
 	title: string;
 	body: string;
@@ -17,7 +17,7 @@ const { imgPath, href, title, body } = Astro.props;
 		<p>{body}</p>
 		<p><a href={href} class="card-link">weiterlesen</a></p>
 		<div class="card-button">
-			<Button href="#contacts" text="MASSAGE BUCHEN" />
+			<ButtonGrey href="#contacts" text="MASSAGE BUCHEN" />
 		</div>
 	</div>
 </div>
@@ -58,49 +58,4 @@ h1, h2 {
 .card-button {
   margin-top: 30px;
 }
-	/* .link-card {
-		list-style: none;
-		display: flex;
-		padding: 0.25rem;
-		background-color: white;
-		background-image: none;
-		background-size: 400%;
-		border-radius: 0.6rem;
-		background-position: 100%;
-		transition: background-position 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-		box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -2px rgba(0, 0, 0, 0.1);
-	}
-
-	.link-card > a {
-		width: 100%;
-		text-decoration: none;
-		line-height: 1.4;
-		padding: 1rem 1.3rem;
-		border-radius: 0.35rem;
-		color: #111;
-		background-color: white;
-		opacity: 0.8;
-	}
-	h2 {
-		margin: 0;
-		font-size: 1.25rem;
-		transition: color 0.6s cubic-bezier(0.22, 1, 0.36, 1);
-	}
-	p {
-		margin-top: 0.5rem;
-		margin-bottom: 0;
-		color: #444;
-	}
-	.link-card:is(:hover, :focus-within) {
-		background-position: 0;
-		background-image: var(--accent-gradient);
-	}
-	.link-card:is(:hover, :focus-within) h2 {
-		color: rgb(var(--accent));
-	} */
-
-	.icon-house {
-		color: red;
-		width: 30px;
-	} 
 </style>
