--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -27,13 +27,13 @@ const { title } = Astro.props;
 		--accent: 124, 58, 237;
 		--accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 	}
-	html {
+	html, body {
 		background-color: #F6F6F6;
 		margin: 0;
 		padding: 0;
-	}
-	body {
-		margin: 0;
+		line-height: 1.2;
+		margin: 0 auto;
+		max-width: 1100px;
 	}
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
