Added sections, photos to about page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,8 +3,8 @@
       <img src="/img/Logo2.png" alt="VitaLena" class="footer-logo">
     </a>
     <ul class="header-menu">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">Über mich</a></li>
+      <li><a href="/">Home</a></li>
+      <li><a href="/about/">Über mich</a></li>
       <li><a href="#massage">Massage</a></li>
       <li><a href="#contact">Kontakte</a></li>
     </ul>
