--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,10 +1,10 @@
 <nav>
-    <a href="#">
+    <a href="/">
       <img src="/img/Logo2.png" alt="VitaLena" class="logo">
     </a>
    
     <ul class="header-menu">
-      <li><a href="#home">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="/about/">Über mich</a></li>
       <li><a href="#massage">Massage</a></li>
       <li><a href="#contact">Kontakte</a></li>
