--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -8,5 +8,6 @@ import Menu from "./Menu.astro";
 <style>
     .banner {
         background-color: #CBC0D3;
+        padding: 20px 40px;
     }
 </style>
