--- a/src/components/ButtonGrey.astro
+++ b/src/components/ButtonGrey.astro
@@ -30,4 +30,15 @@ const { href, text } = Astro.props;
         font-weight: 500;
     }
 
+    @media (max-width: 600px) {
+        .button-grey {
+            width: 160px;
+            font-size: 16px;
+            padding: 8px 0;
+            display: block;
+            margin-left: auto;
+            margin-bottom: 8px;
+        }
+    }
+
 </style>
