--- a/src/components/ButtonPink.astro
+++ b/src/components/ButtonPink.astro
@@ -28,4 +28,15 @@ const { href, text } = Astro.props;
         background-color: #DEE2FF;
         color: #FEEAFA;
     }
+
+    @media (max-width: 600px) {
+        .button-pink {
+            width: 160px;
+            font-size: 16px;
+            padding: 8px 0;
+            margin-left: 5px;
+            display: block;
+            margin-left: auto;
+        }
+    }
 </style>
