--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -58,4 +58,28 @@ h1, h2 {
 .card-button {
   margin-top: 30px;
 }
+
+@media (max-width: 600px) {
+
+	.cards h1 {
+		font-size: 26px;
+	}
+
+	.card-text h2 {
+		font-size: 22px;
+	}
+
+	.card-text p{
+		font-size: 18px;
+	}
+
+	.card {
+		margin-top: 20px;
+		width: 100%;
+	}
+
+	.card .button-grey {
+		margin: 0 auto;
+	}
+}
 </style>
