--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -69,4 +69,29 @@
         margin-top: 120px;
         font-size: 13px;
     }
+
+    @media (max-width: 600px) {
+      .footer {
+        padding: 20px 20px;
+      }
+
+      .footer-logo {
+        width: 90px;
+      }
+
+      .emr {
+        margin-top: 20px;
+        width: 150px;
+      }
+
+      .footer li a {
+        font-size: 16px;
+        padding: 6px;
+      }
+
+      .copyright {
+        margin-top: 50px;
+        font-size: 11px;
+      }
+    }
   </style>
