--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -25,6 +25,40 @@
     </div>
   </nav>
 
+  <script>
+    const openNav = function () {
+      document.getElementById("mySidepanel").style.width = "50%";
+    }
+
+    const closeNav = function () {
+      document.getElementById("mySidepanel").style.width = "0";
+    }
+
+    document
+      .getElementById("openBtn")
+      .addEventListener("click", function (event) {
+        openNav();
+      });
+  
+    document
+      .getElementById("closeBtn")
+      .addEventListener("click", function (event) {
+        closeNav();
+      });
+
+    document
+      .getElementById("homeLink")
+      .addEventListener("click", function (event) {
+        closeNav();
+      });
+
+      document
+      .getElementById("aboutLink")
+      .addEventListener("click", function (event) {
+        closeNav();
+      });
+  </script>
+
 <style>
 nav a {
   text-decoration: none;
@@ -65,5 +99,71 @@ li a {
 
 li :last-child {
   padding-right: 0;
+}
+
+
+@media (max-width: 600px) {
+
+.header-menu {
+  display: none;
+}
+
+/* humburger menu */
+
+.hamburger-menu {
+  display: block;
+}
+
+.hamburger {
+  font-size: 30px;
+  font-weight: 100;
+}
+
+.sidepanel  {
+  width: 0;
+  position: absolute;
+  z-index: 1;
+  height: 100%;
+  top: 0;
+  right: 0;
+  background-color: #CBC0D3;
+  overflow-x: hidden;
+  transition: 0.8s;
+  padding-top: 60px;
+}
+
+.sidepanel a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  white-space: nowrap;
+  font-size: 20px;
+  color: white;
+  display: block;
+  transition: 0.3s;
+}
+
+.sidepanel a:hover {
+  color: #f1f1f1;
+}
+
+.sidepanel .closebtn {
+  position: absolute;
+  top: 13px;
+  right: 27px;
+  font-size: 36px;
+}
+
+.openbtn {
+  font-size: 25px;
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+.openbtn:hover {
+  background-color: transparent;
+}
 }
 </style>
