--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -108,6 +108,11 @@ li :last-child {
   display: none;
 }
 
+.logo {
+  width: 90px;
+  margin-bottom: 8px;
+}
+
 /* humburger menu */
 
 .hamburger-menu {
@@ -130,6 +135,7 @@ li :last-child {
   overflow-x: hidden;
   transition: 0.8s;
   padding-top: 60px;
+  box-sizing: border-box;
 }
 
 .sidepanel a {
