--- a/src/components/ButtonGrey.astro
+++ b/src/components/ButtonGrey.astro
@@ -35,7 +35,7 @@ const { href, text } = Astro.props;
             width: 160px;
             font-size: 16px;
             padding: 8px 0;
-            display: block;
+            /* display: block; */
             margin-left: auto;
             margin-bottom: 8px;
         }
