--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -15,8 +15,8 @@
       <div id="mySidepanel" class="sidepanel">
 
         <a id="closeBtn" href="#" class="closebtn" >×</a>
-        <a id="homeLink" href="#home">Home</a>
-        <a id="aboutLink" href="#about">Über mich</a>
+        <a id="homeLink" href="/">Home</a>
+        <a id="aboutLink" href="/about/">Über mich</a>
         <a id="massageLink" href="#massage">Massage</a>
         <a id="contactLink" href="#contact">Kontakte</a>
       </div>
@@ -157,6 +157,7 @@ li :last-child {
   top: 13px;
   right: 27px;
   font-size: 36px;
+  padding: 8px 16px;
 }
 
 .openbtn {
