--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,7 @@ import Layout from '../layouts/Layout.astro';
 import Card from '../components/Card.astro';
 import Footer from '../components/Footer.astro';
 import BannerHome from '../components/BannerHome.astro';
-import Menu from '../components/Menu.astro';
+import { Icon } from 'astro-icon';
 ---
 <Layout title="VitaLena">
 	<main>
@@ -14,7 +14,7 @@ import Menu from '../components/Menu.astro';
 			<div class="address">
 			  <div class="addr-item1">
 				<div class="icon-text">
-				  <i class="fa fa-home addr-icon home-icon" aria-hidden="true"></i>
+				  <Icon name="fa-solid:home" class="addr-icon home-icon" />
 				  <div>
 					<div class="addr-place">
 					  <p>
@@ -33,13 +33,13 @@ import Menu from '../components/Menu.astro';
 				  </div>
 				</div>
 				<div class="icon-text">
-				  <i class="fa fa-phone addr-icon" aria-hidden="true"></i>
+				  <Icon name="fa-solid:phone-alt" class="addr-icon" />
 				  <a href="tel:+41795648109" target="_blank">
 					+41 (0)79 564 81 09
 				  </a>
 				</div>
 				<div class="icon-text icon-text-last">
-				  <i class="fa fa-envelope addr-icon" aria-hidden="true"></i>
+				  <Icon name="fa-solid:envelope" class="addr-icon" />
 				  <a href="mailto:elena_schaller@swissonline.ch" target="_blank">
 					elena_schaller@swissonline.ch
 				  </a>
@@ -48,7 +48,7 @@ import Menu from '../components/Menu.astro';
 			  </div>
 			  <div class="addr-item2">
 				<div class="icon-text">
-				  <i class="fa fa-home addr-icon home-icon" aria-hidden="true"></i>
+				  <Icon name="fa-solid:home" class="addr-icon home-icon" />
 				  <div>
 					<div class="addr-place">
 					  <p>SALZGROTTE</p>
@@ -65,13 +65,13 @@ import Menu from '../components/Menu.astro';
 				  </div>
 				</div>
 				<div class="icon-text">
-				  <i class="fa fa-phone addr-icon" aria-hidden="true"></i>
+				  <Icon name="fa-solid:phone-alt" class="addr-icon" />
 				  <a href="tel:+41445505555" target="_blank">
 					+41 (0)44 550 55 55
 				  </a>
 				</div>
 				<div class="icon-text icon-text-last">
-				  <i class="fa fa-envelope addr-icon" aria-hidden="true"></i>
+				  <Icon name="fa-solid:envelope" class="addr-icon" />
 				  <a href="mailto:info@salzgrotte.ch" target="_blank">info@salzgrotte.ch</a>
 				</div>
 			  </div>
@@ -232,12 +232,13 @@ import Menu from '../components/Menu.astro';
 		}
 
 		.addr-icon {
-			font-size: 13px;
-			width: 14px;
+			width: 18px;
+			height: 18px;
 		}
 
 		.home-icon {
-			font-size: 17px;
+			width: 20px;
+			height: 20px;
 		}
 
 		/* quote */
