Added sections to about page, created a photo grid

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,24 +3,64 @@ import Layout from "../layouts/Layout.astro";
 import Banner from "../components/Banner.astro";
 import Footer from "../components/Footer.astro";
 ---
+
 <Layout title="VitaLena">
     <main>
         <Banner />
-        <div class="image-section">
+        <div class="page-title">
             <h1>Über mich</h1>
+        </div>
+
+        <div class="image-section">
             <div class="images">
-                <img src="/img/massage1-opt.jpg" alt="" class="personal-photo">
+                <img
+                    src="/img/about-person.jpg"
+                    alt=""
+                    class="personal-photo"
+                />
                 <div>
-                    <img src="/img/massage1-opt.jpg" alt="" class="personal-photo">
+                    <img
+                        src="/img/about-process.jpg"
+                        alt=""
+                        class="process-photo"
+                    />
                     <div class="studio-photos">
-                        <img src="/img/massage1-opt.jpg" alt="" class="personal-photo">
-                        <img src="/img/massage1-opt.jpg" alt="" class="personal-photo">
+                        <img
+                            src="/img/about-room1.jpg"
+                            alt=""
+                            class="room-photo"
+                        />
+                        <img
+                            src="/img/about-room2.jpeg"
+                            alt=""
+                            class="room-photo"
+                        />
                     </div>
                 </div>
             </div>
         </div>
         <div class="about-text">
-            <p>Hello World</p>
+            <h2>Steckbrief</h2>
+            <p>
+                <!-- TODO -->
+                Nach meiner technischen Lehre und anschliessendem Studium,
+                arbeitete ich unter anderem in der Medizinaltechnik, wo ich mich
+                erstmals mit den Funktionen des menschlichen Körpers auseinander
+                setzte. Während dieser Zeit hatte ich selber starke
+                Rückenprobleme, welche auch nach ärztlicher und chiropraktischer
+                Behandlung immer wieder auftauchten. Durch eine Massagetherapie
+                wurde ich bis heute von meinen Beschwerden befreit. Fasziniert
+                vom Erfolg dieser Massagetherapie und angetrieben vom Wunsch
+                Menschen zu helfen und mehr über die Funktionsweise des
+                menschlichen Körpers zu erfahren, absolvierte ich die Ausbildung
+                zum Masseur.
+            </p>
+            <h2>Ausbildungen</h2>
+            <p>- Diplomierter Berufsmasseur bei der Fachschule Bodyfeet</p>
+            <p>- Diplomierter Dorn-Therapeut bei der Fachschule Bodyfeet</p>
+            <p>- Diplomierter Gesundheitsmasseur bei der Fachschule Bodyfeet</p>
+            <p>- Kopfschmerz- und Migränetherapie bei der Fachschule Bodyfeet</p>    
+            <p>- Professionelle Sportmassage bei der Fachschule Bodyfeeteschwerden befreit</p>
         </div>
         <Footer />
     </main>
@@ -28,29 +68,50 @@ import Footer from "../components/Footer.astro";
 
 <style>
     main {
-		margin: 0 auto;
-		max-width: 1100px;
-  		height: 100%;
-		background-color: #EFD3D7;
-	}
+        margin: 0 auto;
+        max-width: 1100px;
+        height: 100%;
+        background-color: #efd3d7;
+    }
 
     h1,
-	h2 {
-		color: #8E9AAF;
-	}
+    h2 {
+        color: #8e9aaf;
+    }
+
+    .page-title {
+        padding: 20px 40px;
+        text-align: center;
+    }
 
     .image-section {
-        padding: 40px 40px;
-        text-align: center;
+        padding: 0 40px;
+    }
+
+    .image-section img {
+        border-radius: 4px;
     }
 
     .images {
         display: flex;
+        flex-flow: wrap;
         gap: 20px;
     }
 
     .personal-photo {
-        width: 40%;
+        max-height: 500px;
+        height: 100%;
+        width: auto;
+    }
+    .process-photo {
+        max-height: 250px;
+        height: 100%;
+        width: auto;
+    }
+    .room-photo {
+        max-height: 250px;
+        height: 100%;
+        width: auto;
     }
 
     .studio-photos {
@@ -59,6 +120,11 @@ import Footer from "../components/Footer.astro";
     }
 
     .about-text {
-        padding: 40px;
+        padding: 20px 40px;
+    }
+
+    .about-text h2 {
+        text-align: center;
+        margin: 20px 0;
     }
 </style>
