--- a/src/components/Banner.astro
+++ b/src/components/Banner.astro
@@ -10,4 +10,10 @@ import Menu from "./Menu.astro";
         background-color: #CBC0D3;
         padding: 20px 40px;
     }
+
+    @media (max-width: 600px) {
+        .banner {
+            padding: 20px;
+        }
+    }
 </style>
