--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -72,7 +72,7 @@
 
     @media (max-width: 600px) {
       .footer {
-        padding: 20px 20px;
+        padding: 20px;
       }
 
       .footer-logo {
