added massage page, chnged logo, xentered logo

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
     <ul class="header-menu">
       <li><a href="/">Home</a></li>
       <li><a href="/about/">Über mich</a></li>
-      <li><a href="#massage">Massage</a></li>
+      <li><a href="/massage/">Massage</a></li>
       <li><a href="#contact">Kontakte</a></li>
     </ul>
     <a href="https://emr.ch/therapeut/elena.schaller" target="_blank">
