--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -6,7 +6,7 @@
     <ul class="header-menu">
       <li><a href="/">Home</a></li>
       <li><a href="/about/">Über mich</a></li>
-      <li><a href="#massage">Massage</a></li>
+      <li><a href="/massage/">Massage</a></li>
       <li><a href="#contact">Kontakte</a></li>
     </ul>
 
@@ -17,7 +17,7 @@
         <a id="closeBtn" href="#" class="closebtn" >×</a>
         <a id="homeLink" href="/">Home</a>
         <a id="aboutLink" href="/about/">Über mich</a>
-        <a id="massageLink" href="#massage">Massage</a>
+        <a id="massageLink" href="/massage/">Massage</a>
         <a id="contactLink" href="#contact">Kontakte</a>
       </div>
       
@@ -110,7 +110,7 @@ li :last-child {
 
 .logo {
   width: 90px;
-  margin-bottom: 8px;
+  /* margin-bottom: 8px; */
 }
 
 /* humburger menu */
