--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -136,6 +136,7 @@ li :last-child {
   transition: 0.8s;
   padding-top: 60px;
   box-sizing: border-box;
+  /* border-left: 0.1mm solid #f1f1f1 ; */
 }
 
 .sidepanel a {
@@ -143,7 +144,7 @@ li :last-child {
   text-decoration: none;
   white-space: nowrap;
   font-size: 20px;
-  color: white;
+  color: #ffffff;
   display: block;
   transition: 0.3s;
 }
