--- a/src/pages/massage.astro
+++ b/src/pages/massage.astro
@@ -14,18 +14,18 @@ import Footer from "../components/Footer.astro";
         
         <div class="card-section">
             <CardMassage
-			  	imgPath1="img/massage1-opt.jpg"
+			  	imgPath1="/img/massage1-opt.jpg"
 				href1="#"
 				title1="Klassische Massage"
 				body1="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."                />
             <CardMassage
-			  	imgPath1="../../public/img/massage2-opt.jpg"
+			  	imgPath1="/img/massage2-opt.jpg"
 				href1="#"
 				title1="Klassische Massage"
 				body1="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
 			/>
             <CardMassage
-			  	imgPath1="../../public/img/massage3-opt.jpg"
+			  	imgPath1="/img/massage3-opt.jpg"
 				href1="#"
 				title1="Klassische Massage"
 				body1="Die klassische Massage ist die am häufigsten angewendete Form der Massage und wird überwiegend zur Vorbeugung und Behandlung von Erkrankungen des Bewegungsapparats eingesetzt."
